--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,31 +2,24 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Pontus Vikstål
     - name: Date of Birth
-      value: 14th March 1879
+      value: 15th October 1993
     - name: Languages
-      value: English, German
+      value: English, Swedish
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Ph.D. student in quantum algorithms and continuous variable quantum computing.
+      institution: Chalmers University of Technology, Gothenburg, Sweden
+      year: NOW
+
+    - title: Licentiate degree
+      institution: Chalmers University of Technology, Gothenburg, Sweden
+      year: 2020
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - Application of the quantum approximate optimization algorithm to combinatorial optimization problems.
 
 - title: Experience
   type: time_table
@@ -94,4 +87,4 @@
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Piano, Music, Meditation, Climbing.
